# ThanimamPro

./: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: python.yml
paper/: paper.bib  paper.md
samples/: sample_nife2o4_spinel.xy  sample_srtio3_perovskite.xrd  sample_tio2_anatase.cif  sample_tio2_rutile.txt
tests/: test_thanimampro.py
thanimampro_api/: __init__.py  database.py  inverse.py  mapper.py  predict.py  schemas.py  structure.py
ugp/: __init__.py  cli.py  config.py  engines.py  models.py
ugp/calculators/: base.py  perplex.py  pywerami.py  thermocalc.py
ugp/core/: pipeline.py  registry.py
ugp/io/: reader.py  writer.py
ugp/uncertainty/: bootstrap.py
