[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thanimampro"
version = "0.1.0"
description = "Synthesis-Structure-Property Integration Platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "ThanimamPro Contributors" }
]
dependencies = [
  "streamlit>=1.41",
  "pandas>=2.2",
  "numpy>=2.1",
  "plotly>=5.24"
]

[tool.setuptools.packages.find]
include = ["thanimampro_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
